--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,7 @@
 <div >
   Greeting: {{mainCtrl.greeting}}
   <br>
+  From: {{mainCtrl.getName()}}
+  <br>
   <button ng-click="mainCtrl.refresh()">Refresh</button>
 </div>
